Use standard styling for quotameter; this fixes danger/warning/success indicators and visibility.

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -492,7 +492,6 @@ div.unified-panel-body-background {
     right: 8px;
     height: 16px;
     width: 100px;
-    background-color: $progress-bg;
 }
 
 .quota-meter-bar {
